# NHF_ujra

./: Ablak.cpp  Ablak.h  Alkalmazas.cpp  Alkalmazas.h  App.cpp  App.h  Bomba.cpp  Bomba.h  CMakeLists.txt  Console.h  FoMenu.cpp  FoMenu.h  Jatek.cpp  Jatek.h  JatekFelirat.cpp  JatekFelirat.h  Jatek_grafika.cpp  Jatek_grafika.h  Jatekallapot.h  Jatekmenet.cpp  Jatekmenet.h  Jatekmenet_grafika.cpp  Jatekmenet_grafika.h  Megjelenito.h  Menu.cpp  Menu.h  MenuFelirat.cpp  Menu_grafika.cpp  Menu_grafika.h  Mezo.cpp  Mezo.h  MezoAllapot.h  Mezo_grafika.cpp  Mezo_grafika.h  Nehezseg.h  Palya.cpp  Palya.h  Palya_grafika.cpp  Palya_grafika.h  Random.cpp  (+10 more)
headerek/: Alkalmazas.h  Bomba.h  FoMenu.h  Jatek.h  Jatekallapot.h  Menu.h  MenuFelirat.h  Mezo.h  MezoAllapot.h  Nehezseg.h  Palya.h  Random.h  Ures.h  grafikai_fuggvenyek.h  matematikai_fuggvenyek.h  test_segedlet.h
nem kell/: SajatNegyszog.cpp  SajatNegyszog.h  SajatSprite.cpp  SajatSprite.h
nem_használt/: megjelenites_kiegeszites.cpp
src/: Alkalmazas.cpp  Bomba.cpp  Felirat.cpp  FoMenu.cpp  Jatek.cpp  Menu.cpp  MenuFelirat.cpp  Mezo.cpp  Palya.cpp  Random.cpp  Ures.cpp  grafikai_fuggvenyek.cpp  main.cpp  matematikai_fuggvenyek.cpp
src/Alkalmazas/: Alkalmazas.cpp  Alkalmazas.h
src/Menuk/: FoMenu.cpp  FoMenu.h  Jatek.cpp  Jatek.h  Menu.h
src/Mezok/: Bomba.h  Mezo.cpp  Mezo.h  Ures.cpp  Ures.h
src/Palya/: Palya.cpp  Palya.h
src/Palya/Random/palya_feltoltes/: Random.cpp  Random.h
src/Segedosztalyok/Enumok/: Jatekallapot.h
src/Segedosztalyok/Grafikai/: Felirat.cpp  Felirat.h  JatekFelirat.cpp  JatekFelirat.h  MenuFelirat.cpp  MenuFelirat.h
src/onallo_logikai/: grafikai_fuggvenyek.cpp  grafikai_fuggvenyek.h  matematikai_fuggvenyek.cpp  matematikai_fuggvenyek.h
src/test/: jatek_test.cpp
test/: jatek_test.cpp
